// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminBackofficeService user update > changes the email through user 1`] = `
{
  "log": [
    [
      "users.updateProfile",
      "user-1",
      "new@example.com",
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "email": "new@example.com",
        "id": "user-1",
      },
    ],
    [
      "repository.findUserById",
      "user-1",
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;

exports[`AdminBackofficeService user update > combines every side effect 1`] = `
{
  "log": [
    [
      "users.reactivate",
      "user-1",
      {
        "id": "olive",
        "type": "user",
      },
    ],
    [
      "users.updateProfile",
      "user-1",
      "a@b.c",
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "id": "user-1",
        "reactivate": true,
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "email": "a@b.c",
        "id": "user-1",
      },
    ],
    [
      "repository.execute",
      {
        "data": {
          "name": "N",
        },
        "id": "user-1",
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "data": {
          "name": "N",
        },
        "id": "user-1",
      },
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;

exports[`AdminBackofficeService user update > deactivates on an unreadable picked date as on a readable one 1`] = `
{
  "log": [
    [
      "users.deactivate",
      "user-1",
      {
        "id": "olive",
        "type": "user",
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "deactivate": true,
        "id": "user-1",
      },
    ],
    [
      "repository.findUserById",
      "user-1",
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;

exports[`AdminBackofficeService user update > deactivates through user, as the operator, keeping no picked date 1`] = `
{
  "log": [
    [
      "users.deactivate",
      "user-1",
      {
        "id": "olive",
        "type": "user",
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "deactivate": true,
        "id": "user-1",
      },
    ],
    [
      "repository.findUserById",
      "user-1",
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;

exports[`AdminBackofficeService user update > normalises the email before handing it to user 1`] = `
{
  "log": [
    [
      "users.updateProfile",
      "user-1",
      "same@example.com",
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "email": "same@example.com",
        "id": "user-1",
      },
    ],
    [
      "repository.findUserById",
      "user-1",
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;

exports[`AdminBackofficeService user update > reactivates on a blank deactivation and saves the rest 1`] = `
{
  "log": [
    [
      "users.reactivate",
      "user-1",
      {
        "id": "olive",
        "type": "user",
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "id": "user-1",
        "reactivate": true,
      },
    ],
    [
      "repository.execute",
      {
        "data": {
          "name": "X",
        },
        "id": "user-1",
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "data": {
          "name": "X",
        },
        "id": "user-1",
      },
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;

exports[`AdminBackofficeService user update > reactivates on a null deactivation 1`] = `
{
  "log": [
    [
      "users.reactivate",
      "user-1",
      {
        "id": "olive",
        "type": "user",
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "id": "user-1",
        "reactivate": true,
      },
    ],
    [
      "repository.findUserById",
      "user-1",
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;

exports[`AdminBackofficeService user update > saves plain fields only 1`] = `
{
  "log": [
    [
      "repository.execute",
      {
        "data": {
          "name": "Only",
        },
        "id": "user-1",
      },
    ],
    [
      "audit.record",
      "admin/update/user",
      {
        "data": {
          "name": "Only",
        },
        "id": "user-1",
      },
    ],
  ],
  "result": {
    "data": {
      "id": "user-1",
    },
  },
}
`;
